--- a/wiki/implemented_methods.wiki
+++ b/wiki/implemented_methods.wiki
@@ -4,7 +4,7 @@
 <tr><td> <strong>HTTP Method</strong> </td><td> <strong>Path</strong> </td><td> <strong>Summary</strong> </td><td> <strong>Java Equivalent</strong> </td></tr>
  <tr style="background:#00ff00;"><td> POST </td><td> /session </td><td> Create a new session. </td><td> <i>N/A</i> </td></tr>
  <tr><td> GET </td><td> /session/:sessionId </td><td> Retrieve the capabilities of the specified session. </td><td> <i>N/A</i> </td></tr>
- <tr style="background:#00ff00;"><td> DELETE </td><td> /session/:sessionId </td><td> Delete the session. </td><td> <a href="http://selenium.googlecode.com/svn/trunk/docs/api/java/org/openqa/selenium/WebDriver.html#quit%28%29" rel="nofollow">WebDriver#quit()</a> </td></tr>
+ <tr color=#00ff00;"><td> DELETE </td><td> /session/:sessionId </td><td> Delete the session. </td><td> <a href="http://selenium.googlecode.com/svn/trunk/docs/api/java/org/openqa/selenium/WebDriver.html#quit%28%29" rel="nofollow">WebDriver#quit()</a> </td></tr>
  <tr><td> POST </td><td> /session/:sessionId/timeouts/async_script </td><td> Set the amount of time, in milliseconds, that asynchronous scripts executed by <tt>/session/:sessionId/execute_async</tt> are permitted to run before they are aborted and a |Timeout| error is returned to the client. </td><td> <i>N/A</i> </td></tr>
  <tr><td> POST </td><td> /session/:sessionId/timeouts/implicit_wait </td><td> Set the amount of time the driver should wait when searching for elements. </td><td> <a href="http://selenium.googlecode.com/svn/trunk/docs/api/java/org/openqa/selenium/WebDriver.Timeouts.html#implicitlyWait%28long,%20java.util.concurrent.TimeUnit%29" rel="nofollow">WebDriver.Timeouts#implicitlyWait(long, TimeUnit)</a> </td></tr>
  <tr><td> GET </td><td> /session/:sessionId/window_handle </td><td> Retrieve the current window handle. </td><td> <a href="http://selenium.googlecode.com/svn/trunk/docs/api/java/org/openqa/selenium/WebDriver.html#getWindowHandle%28%29" rel="nofollow">WebDriver#getWindowHandle()</a> </td></tr>
