--- a/wiki/usingCWebDriverTestCase.wiki
+++ b/wiki/usingCWebDriverTestCase.wiki
@@ -2,29 +2,7 @@
 
 Interface provided by CWebDriverTestCase is like classic Selenium PHPUnit_Extensions_SeleniumTestCase. 
 
-for example:
-{{{
-<?php
-require_once 'PHPUnit/Extensions/SeleniumTestCase.php';
- 
-class WebTest extends PHPUnit_Extensions_SeleniumTestCase
-{
-    protected function setUp()
-    {
-        $this->setBrowser('*firefox /usr/lib/firefox/firefox-bin');
-        $this->setBrowserUrl('http://www.example.com/');
-    }
- 
-    public function testTitle()
-    {
-        $this->open('http://www.example.com/');
-        $this->assertTitleEquals('Example Web Page');
-    }
-}
-?>
-}}}
-
-you can use CWebDriverTestCase like this:
+You can use CWebDriverTestCase like this:
 {{{
 <?php
 require_once 'phpwebdriver/CWebDriverTestCase.php';
