--- a/wiki/DifferenceBetweenWebdriverAndSelenium1.wiki
+++ b/wiki/DifferenceBetweenWebdriverAndSelenium1.wiki
@@ -6,3 +6,5 @@ Selenium 1 used Javascript to control browser. It was fine for simple web apps, 
 Webdriver (now integral part of Selenium2) uses native browser extension (each browser needs its own implementation) which is controlled by test script. Webdriver tests script can connect directly to browser (for example using FirefoxDriver) or remotely through Selenium Server (using JsonWireProtocol).
 
 Generally Webdriver approach is much more faster and reliable. 
+
+Recommended article: http://google-opensource.blogspot.com/2009/05/introducing-webdriver.html
