--- a/wiki/HowToUploadFile.wiki
+++ b/wiki/HowToUploadFile.wiki
@@ -1,7 +1,7 @@
 = How to upload file using php-webdriver-bindings =
 
 Here is example how to upload file using php-webdriver-bindings.
-We just need get input element, send file directory using sendKeys method and finally submit element.
+We just need to get input-file element, send file directory using sendKeys method and finally submit element.
 
 {{{
             $element = $this->webdriver->findElementBy(LocatorStrategy::id, "inputId");
